# edgeiq

./: .edgeiq_cache_alert_state.json  .edgeiq_gap_calib_alert.json  .edgeiq_gap_down_calib_alert.json  .edgeiq_missing_calib_script_alert.json  .edgeiq_morning_tcs_calib.json  .edgeiq_pending_resolver_alert.json  .edgeiq_squeeze_calib_alert.json  .edgeiq_tiered_pnl_run_stats.json  .env.example  .gitignore  .replit  .ticker_screener_pass.json  EdgeIQ_Build_Notes.txt  _launch_gap_bt.py  _private_notes.md  _private_notes_original.md  accuracy_tracker.csv  adaptive_exit_backtest.py  adaptive_exits.json  app.py  app_v1_snapshot.py  apply_best_grid_combo.py  backend.py  backfill_bearish_break_screener_pass.py  backfill_close_prices.py  backfill_context_levels.py  backfill_gap_down_log.py  backfill_history.json  backfill_ib_vwap.py  backfill_mfe_mae.py  backfill_pending_sim_rows.py  backfill_pm_ib_checkpoint.json  backfill_pm_prevday_ib.py  backfill_screener_pass.py  backfill_sr_levels.py  backfill_utils.py  batch_backtest.py  brain_weights.json  brain_weights_historical.json  cache_helpers.py  (+77 more)
.agents/: agent_assets_metadata.toml
.streamlit/: config.toml
attached_assets/: Pasted--COGNITIVE-PROFILE-TEST-TASK-SPEC-April-13-2026-Two-aud_1776228454540.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta_1776196537215.txt  Pasted--Library-Search-Other-Start-application-Website-Documen_1775851423548.txt  Pasted--Ticker-Rank-Notes-ISPC-0-Skip-optional-note-USA-0-Skip_1776603665763.txt  Pasted--type-application-tldraw-kind-content-version-3-data-as_1776805177830.txt  (+33 more)
(+65 files in other folders)
