[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43.2",
    "fpdf>=1.7.2",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pytz>=2026.1.post1",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
    "streamlit-lightweight-charts>=0.7.20",
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "supabase>=2.28.3",
    "apscheduler>=3.10",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = [
    "test_*.py",
    "tests/*",
    "migrations/*",
    "artifacts/*",
    ".pythonlibs/*",
    "node_modules/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
